# RTSPLiveClient

./: .gitignore  CMakeLists.txt  README.md
CMakeModules/: FindFFmpeg.cmake  FindLive555.cmake
inc/: DummyVideoSink.hpp  H265RTSPClient.hpp  HEVCRTSPClient.hpp  SDLVideoSink.hpp  StreamClientState.hpp
src/: DummyVideoSink.cpp  H265RTSPClient.cpp  HEVCRTSPClient.cpp  SDLVideoSink.cpp  StreamClientState.cpp  main.cpp
